--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,24 +12,40 @@ body {
 	header	{
 	/* make background color */
 	background-color: #4aaaa5;
-	border-bottom: none;
 	/* make about|portfolio|contact locate right from Artem Tregubchak */
 	float: left;
 	/* make Artem Tregubchak white */
 	color: #ffffff;
-	height: 100%;
-	vertical-align: top;
-	/* create the width of Artem Tregubchak */
-	width: 270px;
 	/* locate Artem Tregubchak 130px left */
 	margin-left: 130px;
-	/* font for Artem Tregubchak */
-	font-family: Corben;
+	/* create the width of Artem Tregubchak */
+	width: 270px;
 	/* locate Artem Tregubchak in the center and in the middle*/
 	text-align: center;
-	vertical-align: middle;
-	font-size: 25px;
+	/* make Artem Tregubchak in the middle of rectangle */
+	padding-top: 15px;
+	padding-bottom: 15px;
+	/* change font */
+	font-family: Corben;
 	font-weight: bold;
-	padding-top: 40px;
+	font-size: 25px;
+
 }
+
+h2,
+h3	{
+	color: #4aaaa5;
+	border-bottom:	3px solid #dddddd;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	margin-top: 1px;
+	padding-bottom: 3px;
+}
+
+nav	{
+	width: 270px;
+	float: right;
+	text-align: center;
+	margin-right: 130px;
+}
+
 
