--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,35 @@
-body {
-	/* Regular font color (used for paragraphs and all text besides the headings): #777777 */
-	color: #77777;
-	/* For all other fonts use 'Arial', 'Helvetica Neue', Helvetica, sans-serif;. */
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	/* text-align property specifies the horizontal alignment of text in an element. */
-	text-align: left;
-	/* ine-height property specifies the line height. */
-	line-height: 20px;
+/* So padding and border no longer increase width. */
+* {
+  box-sizing: border-box;
 }
-/* style Artem Tregubchak*/
-	header	{
-	/* make background color */
-	background-color: #4aaaa5;
-	/* make about|portfolio|contact locate right from Artem Tregubchak */
+
+
+body {
+	/*change text color */
+	color: #777777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	line-height: 30px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	line-height: 25px;
+	text-align: left;
+}	
+
+header	{
 	float: left;
-	/* make Artem Tregubchak white */
+	background-color: #4aaaa5;
 	color: #ffffff;
-	/* locate Artem Tregubchak 130px left */
-	margin-left: 130px;
-	/* create the width of Artem Tregubchak */
+	height: 100%;
 	width: 270px;
-	/* locate Artem Tregubchak in the center and in the middle*/
+	margin-left: 125px;
+	font-family: 'Arial', Times, Times New Roman, serif;
 	text-align: center;
-	/* make Artem Tregubchak in the middle of rectangle */
-	padding-top: 15px;
-	padding-bottom: 15px;
-	/* change font */
-	font-family: Corben;
 	font-weight: bold;
 	font-size: 25px;
-
+	vertical-align: middle;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	border-bottom: none;
+	margin-bottom: 0;
 }
 
 h2,
@@ -39,13 +39,218 @@ h3	{
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	margin-top: 1px;
 	padding-bottom: 3px;
-}
+}	
 
 nav	{
 	width: 270px;
 	float: right;
 	text-align: center;
-	margin-right: 130px;
+	margin-right: 125px;
 }
 
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
 
+li {
+	float: left;
+	width: 33%;
+	padding: 10px;
+}
+
+li.border {
+	border-right: 1px solid #dddddd;
+	padding: 10px;
+}
+
+ul.circle {
+	list-style: circle;
+	margin-left: 50px;
+	padding: 0;
+}
+
+li.circle {
+	float: inherit;
+	padding: 0;
+	margin-left: 200px;
+	width: 66%;
+}
+
+a {
+	color: #777777;
+	text-decoration: none;
+}
+
+/* about|portfolio|contact */
+a:hover {
+  color: #4aaaa5;
+}
+
+section	{
+	background-color: #ffffff;
+	float: left;
+	color: #777777;
+	border: 2px solid #dddddd;
+}
+
+input,
+textarea {
+	width: 100%;
+	padding: 10px 20px 10px 10px;
+    margin: 8px 0;
+    border-color: #dddddd;
+    border-style: solid;
+    border-width: thin;
+}
+
+/* Need to control placeholder. */
+input,
+textarea,
+input::-webkit-input-placeholder {
+    	font-size: 14px;
+}
+
+footer {
+	clear: both;
+	margin: 0 auto;
+	vertical-align: middle;
+	padding: 20px;
+	height: 70px;
+	background-color: #666666;
+	width: 100%;
+	border-bottom: none;
+	color: #777777;
+	text-align: center;
+}
+
+	.icon {
+		width: 60px;
+		height: auto;
+		color: none;
+		border-right: none;
+		-moz-transition: all 2s ease-out;
+		-o-transition: all 2s ease-out;
+		-webkit-transition: all 2s ease-out;
+		cursor: pointer;
+	}
+
+		/* change scale of about|portfolio|contact */
+		.icon:hover {
+			-webkit-transform: scale(1.5);
+			-moz-transform: scale(1.5);
+			-o-transform: scale(1.5);
+		}
+
+	.header-container {
+		border-bottom: 2px solid #cccccc;
+		background-color: #ffffff;
+		height: 60px;
+	}
+
+	.main-container {
+		clear: both;
+		/* the overflow is clipped and a scrollbar is added to scroll inside the box + it add scrollbars when necessary */
+		overflow: auto;
+		margin: 0 auto;
+		background-image: url("../images/background.png");
+		height: 600px;
+		width: 100%;
+		border-bottom: 5px solid #4aaaa5;
+	}
+
+	.project {
+		float: left;
+		position: relative;
+		top:	-10px;
+		width: 230px;
+	}
+
+	.box1,
+	.box2,
+	.box3,
+	.box4,
+	.box5 {
+		display: inline-block;
+		width: 250px;
+		height: 100px;
+		margin: 20px;
+	}
+
+	.project-title {
+		float: left;
+		position: relative;
+		top: -50px;
+		width: 100%;
+		height: 30px;
+		background-color: #4aaaa5;
+		color: #ffffff;
+		text-align: center;
+	}
+
+	.button {
+		background-color: #4aaaa5;
+		color: #ffffff;
+		width: 100px;
+		height: 40px;
+		font-size: 16px;
+		border: none;
+		position: relative;
+		top: -8px;
+	}
+
+		/* locate connect with me */
+		#links {
+			float: right;
+			padding: 10px;
+			width: 270px;
+			top: 30px;
+			text-align: center;
+			margin-right: 125px;
+			margin-top: 30px
+		}
+	
+		/*my photo + text */
+		#my-profile-image {
+			clear: both;
+			float: left;
+			margin-right: 20px;
+			width: 200px;
+			height: 300px;
+		}
+
+		#main-bio,
+		#contact-form,
+		#project-portfolio {
+			position: relative;
+			text-align: left;
+			width: 650px;
+			top: 30px;
+			margin-left: 125px;
+			margin-bottom: 50px;
+			padding: 20px;
+		}
+
+		#contact-form,
+		#contact {
+			height: 500px;
+		}
+
+		#main-bio {
+			height: auto;
+			text-align: justify;
+		}
+
+		#p1 {
+			margin-bottom: 0px;
+		}
+
+		#p2 {
+			margin-top: 0px;
+			margin-bottom: 0px;
+		}
+
+		#p3 {
+			margin-top: 0px;
+		}
