--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ footer {
 		border-bottom: 5px solid #4aaaa5;
 	}
 
-	.project {
+	.project-img {
 		float: left;
 		position: relative;
 		top:	-10px;
@@ -175,14 +175,15 @@ footer {
 		display: inline-block;
 		width: 250px;
 		height: 100px;
-		margin: 20px;
+		margin: 20px 20px 20px 0px;
+		padding-left: 0px;
 	}
 
 	.project-title {
 		float: left;
 		position: relative;
 		top: -50px;
-		width: 100%;
+		width: 230px;
 		height: 30px;
 		background-color: #4aaaa5;
 		color: #ffffff;
