--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,16 +65,29 @@ li.border {
 	padding: 10px;
 }
 
-ul.circle {
-	list-style: circle;
-	margin-left: 50px;
+/*add pictures to list in main-bio*/
+ul.vodka {
+	list-style-image: url(../images/vodka.png);
 	padding: 0;
+	margin-left: 10px;
+}
+
+ul.bear {
+	list-style-image: url(../images/bear.png);
+	padding: 0;
+	margin-left: 10px;
+}
+
+ul.balalaika {
+	list-style-image: url(../images/balalaika.png);
+	padding: 0;
+	margin-left: 10px;
 }
 
 li.circle {
 	float: inherit;
 	padding: 0;
-	margin-left: 200px;
+	margin-left: 250px;
 	width: 66%;
 }
 
@@ -138,9 +151,9 @@ footer {
 
 		/* change scale of about|portfolio|contact */
 		.icon:hover {
-			-webkit-transform: scale(1.5);
-			-moz-transform: scale(1.5);
-			-o-transform: scale(1.5);
+			-webkit-transform: scale(1.5);  /* Safari + Chrome */
+			-moz-transform: scale(1.5);   /* Firefox */
+			-o-transform: scale(1.5);  /* Opera */
 		}
 
 	.header-container {
@@ -167,6 +180,7 @@ footer {
 		width: 230px;
 	}
 
+	/*locate projects on portfolio page correctly*/
 	.box1,
 	.box2,
 	.box3,
@@ -177,6 +191,132 @@ footer {
 		height: 100px;
 		margin: 20px 20px 20px 0px;
 		padding-left: 0px;
+		/*locate our box on the highest layout, so our gif image under it*/
+		z-index: 9909;
+		/*need for animation portfolio projects*/
+			-webkit-transition: all 1.5s ease-in-out;
+	        -moz-transition: all 1.5s ease-in-out;
+	        -o-transition: all 1.5s ease-in-out;
+	        -ms-transition: all 1.5s ease-in-out;
+	        transition: all 1.5s ease-in-out;
+	}
+	/*rotate 360*/
+	.box1:hover {
+		-moz-transform: rotate(360deg);  /* Firefox */
+  		-o-transform: rotate(360deg);  /* Opera */
+  		-webkit-transform: rotate(360deg);  /* Safari + Chrome */
+	}
+
+	
+	/* Pulse for box2 */
+	@-webkit-keyframes box2 {
+	  25% {
+	    -webkit-transform: scale(1.1);
+	    transform: scale(1.1);
+	  }
+	  75% {
+	    -webkit-transform: scale(0.9);
+	    transform: scale(0.9);
+	  }
+	}
+	@keyframes box2 {
+	  25% {
+	    -webkit-transform: scale(1.1);
+	    transform: scale(1.1);
+	  }
+	  75% {
+	    -webkit-transform: scale(0.9);
+	    transform: scale(0.9);
+	  }
+	}
+	.box2 {
+		display: inline-block;
+		vertical-align: middle;
+		-webkit-transform: perspective(1px) translateZ(0);
+		transform: perspective(1px) translateZ(0);
+		box-shadow: 0 0 1px transparent;
+	}
+	.box2:hover, .box2:focus, .box2:active {
+		-webkit-animation-name: box2;
+		animation-name: box2;
+		-webkit-animation-duration: 1.5s;
+		animation-duration: 1.5s;
+		-webkit-animation-timing-function: linear;
+		animation-timing-function: linear;
+		-webkit-animation-iteration-count: infinite;
+		animation-iteration-count: infinite;
+	}
+
+	/* Curl Top Left for box3 */
+	.box3 {
+		display: inline-block;
+		vertical-align: middle;
+		-webkit-transform: perspective(1px) translateZ(0);
+		transform: perspective(1px) translateZ(0);
+		box-shadow: 0 0 1px transparent;
+		position: relative;
+	}
+	.box3:before {
+		pointer-events: none;
+		position: absolute;
+		content: '';
+		height: 0;
+		width: 0;
+		top: 0;
+		left: 0;
+		background: white;
+		/* IE9 */
+	    background: linear-gradient(135deg, white 45%, #aaa 50%, #ccc 56%, white 80%);
+		filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#ffffff', endColorstr='#000000');
+		/*For IE7-8-9*/
+		z-index: 1000;
+		box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+		-webkit-transition-duration: 0.3s;
+		transition-duration: 0.3s;
+		-webkit-transition-property: width, height;
+		transition-property: width, height;
+	}
+	.box3:hover:before, .box3:focus:before, .box3:active:before {
+		width: 80px;
+		height: 80px;
+	}
+
+
+	/* box4 down */
+	.box4 {
+		display: inline-block;
+  		vertical-align: middle;
+		-webkit-transform: perspective(1px) translateZ(0);
+		transform: perspective(1px) translateZ(0);
+		box-shadow: 0 0 1px transparent;
+		-webkit-transition-duration: 2s;
+		transition-duration: 2s;
+		-webkit-transition-property: transform;
+		transition-property: transform;
+		position: relative;
+	}
+	.box4:hover, .box4:focus, .box4:active {
+		-webkit-transform: translateY(140px);
+		transform: translateY(140px);
+	}
+	
+	/* Forward box5 */
+	.box5 {
+		/*position:relative need to locate over picture*/
+		position: relative;
+		display: inline-block;
+		vertical-align: middle;
+		-webkit-transform: perspective(1px) translateZ(0);
+		transform: perspective(1px) translateZ(0);
+		box-shadow: 0 0 1px transparent;
+		-webkit-transition-duration: 1.5s;
+		transition-duration: 1.5s;
+		-webkit-transition-property: transform;
+		transition-property: transform;
+	}
+	.box5:hover, .box5:focus, .box5:active {
+	  -webkit-transform: translateX(270px);
+	  transform: translateX(270px);
 	}
 
 	.project-title {
@@ -199,6 +339,10 @@ footer {
 		border: none;
 		position: relative;
 		top: -8px;
+	}
+	/*change submit button*/
+	.button:hover {
+        border-radius:60%;
 	}
 
 		/* locate connect with me */
@@ -237,7 +381,7 @@ footer {
 		#contact {
 			height: 500px;
 		}
-
+		/*settings for text on main-bio page*/
 		#main-bio {
 			height: auto;
 			text-align: justify;
@@ -254,4 +398,17 @@ footer {
 
 		#p3 {
 			margin-top: 0px;
+		}
+
+		#hangman-image {
+			width: 230px;
+			height: 115px;
+			position: absolute; left: 290px; top: 232px;
+		}
+
+		#RPS {
+			width: 230px;
+			height: 115px;
+			position: absolute; left: 20px; top: 372px;
+			z-index: 1;
 		}
